examples/codegen/stdlib-tests/stream.an
import Std.Stream.iota, enumerate, map, filter, iter, stream_fn, all, any, foldl, foldr,
    filter_map, reduce, map2, zip, intersperse, intersperse_with, chain, count,
    find, find_map, take, take_while, skip, skip_while, sum, product, for_, Loop,
    break_, continue_, Emit, emit
import Std.Fail.Fail, try

main () =
    iota 10
        |> filter (fn x -> x.* %% 2)
        |> map (_ * 2)
        |> enumerate
        |> iter println

    evens = iota 10 |> map (_ * 2)
    println <| all evens (_ %% 2)

    fold_tests ()
    extra_tests ()

fold_tests () =
    foldl_result = iota 5 |> foldl 0 (-) // (((0 - 1) - 2) - 3) - 4 = -10
    foldr_result = iota 5 |> foldr 0 (-) // 0 - (1 - (2 - (3 - 4))) = 2

    // pain point: No `Cast Usz I64` nor a `TryCast Usz I64`
    println (transmute foldl_result : I64)
    println foldr_result

extra_tests () =
    // any:
    println (any (iota 5) (_ > 3))   // true
    println (any (iota 3) (_ > 99))  // false

    // filter_map
    iota 5
        |> filter_map (fn x -> if x %% 2 then Some (x * 10) else None)
        |> iter println  // 0, 20, 40

    // reduce: success + empty (wrap in try because reduce {Fail})
    println (try (fn {f} -> reduce (iota 5) (+)) : Maybe Usz)   // Some 10
    println (try (fn {f} -> reduce (iota 0) (+)) : Maybe Usz)   // None

    // map2: truncates to shorter input
    map2 (iota 3) (iota 5) (+)
        |> iter println                   // 0, 2, 4

    // zip
    zip (iota 3) (iota 4)
        |> iter println                   // (0, 0), (1, 1), (2, 2)

    // intersperse:
    chain (chain (emit "a" _) (emit "b" _)) (emit "c" _)
        |> intersperse ", "
        |> iter println

    // intersperse_with:
    iota 3
        |> intersperse_with (fn () -> 88)
        |> iter println    // 0, 88, 1, 88, 2

    // chain
    chain (iota 2) (iota 2)
        |> iter println // 0, 1, 0, 1

    // count:
    println (count (iota 7))  // 7

    // find:
    println (try (do find (iota 5) (_ > 2)))    // Some 3
    println (try (do find (iota 5) (_ > 99)))   // None

    // find_map:
    println (try (fn {f} -> find_map (iota 5) (fn x -> iff (x == 3) (do x * 10))))  // Some 30

    // take, take_while
    iota 100 |> take 3 |> iter println       // 0, 1, 2
    iota 100 |> take_while (_ < 3) |> iter println  // 0, 1, 2

    // skip, skip_while
    iota 5 |> skip 3 |> iter println          // 3, 4
    iota 5 |> skip_while (_ < 2) |> iter println  // 2, 3, 4

    // sum + product
    println (sum (iota 5) 0)                     // 10
    println (product (iota 5 |> map (_ + 1)) 1)  // 120

    println "for_:"
    for_ (iota 20) fn x {l} ->
        if x %% 3 then continue_ ()
        if x == 8 then break_ ()
        println x

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/stdlib-tests/stream.an:51:19
// 50 |     // intersperse:
//    |     // error: This is called as if it were a fn _ _ => _ but it has type fn _ -> Unit can (Emit _)
// 51 |     chain (chain (emit "a" _) (emit "b" _)) (emit "c" _)
//    |                   ^^^^
// 52 |         |> intersperse ", "
// 
// examples/codegen/stdlib-tests/stream.an:51:32
// 50 |     // intersperse:
//    |     // error: This is called as if it were a fn _ _ => _ but it has type fn _ -> Unit can (Emit _)
// 51 |     chain (chain (emit "a" _) (emit "b" _)) (emit "c" _)
//    |                                ^^^^
// 52 |         |> intersperse ", "
// 
// examples/codegen/stdlib-tests/stream.an:51:46
// 50 |     // intersperse:
//    |     // error: This is called as if it were a fn _ _ => _ but it has type fn _ -> Unit can (Emit _)
// 51 |     chain (chain (emit "a" _) (emit "b" _)) (emit "c" _)
//    |                                              ^^^^
// 52 |         |> intersperse ", "
// 
// examples/codegen/stdlib-tests/stream.an:87:20
// 86 |     println "for_:"
// 87 |     for_ (iota 20) fn x {l} ->	// error: Expected 1 argument but found 2
//    |                    ^^^^^^^^^^^
// 88 |         if x %% 3 then continue_ ()
// 
// examples/codegen/stdlib-tests/stream.an:88:14
// 87 |     for_ (iota 20) fn x {l} ->
//    |         // error: Multiple matching implicits found for type Cast U8 (error) required by %%: cast_u8_char, cast_u8_f32, cast_u8_f64, cast_u8_i32, cast_u8_u16, ..
// 88 |         if x %% 3 then continue_ ()
//    |              ^^
// 89 |         if x == 8 then break_ ()
// 
// examples/codegen/stdlib-tests/stream.an:88:14
// 87 |     for_ (iota 20) fn x {l} ->
//    |         // error: No implicit found for type Eq (error) required by %%
// 88 |         if x %% 3 then continue_ ()
//    |              ^^
// 89 |         if x == 8 then break_ ()
//    = note: did you mean to import Std.Prelude.eq_bool or Std.Prelude.eq_char? (or 3 more)
// 
// examples/codegen/stdlib-tests/stream.an:88:14
// 87 |     for_ (iota 20) fn x {l} ->
//    |         // error: No implicit found for type Mod (error) required by %%
// 88 |         if x %% 3 then continue_ ()
//    |              ^^
// 89 |         if x == 8 then break_ ()
//    = note: did you mean to import Std.Prelude.mod_i16 or Std.Prelude.mod_i32? (or 3 more)
// 
// examples/codegen/stdlib-tests/stream.an:89:14
// 88 |         if x %% 3 then continue_ ()
//    |         // error: No implicit found for type Eq (error) required by ==
// 89 |         if x == 8 then break_ ()
//    |              ^^
// 90 |         println x
//    = note: did you mean to import Std.Prelude.eq_bool or Std.Prelude.eq_char? (or 3 more)
// 
// examples/codegen/stdlib-tests/stream.an:90:9
// 89 |         if x == 8 then break_ ()
// 90 |         println x	// error: No implicit found for type Print (error) required by println
//    |         ^^^^^^^
//    = note: did you mean to import Std.HashMap.print_hashmap or Std.Prelude.print_array? (or 3 more)
// 
// Found 9 errors and 0 warnings

